# dir

./: .dockerignore  .gitignore  .golangci.yml  .licensei.toml  API_SPEC.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT.md  LICENSE.md  MAINTAINERS.md  README.md  RELEASE.md  SECURITY.md  Taskfile.yml  USAGE.md  codecov.yml  docker-bake.hcl  versions.yaml
.github/: CODEOWNERS  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: brew-formula-update.yaml  buf-ci.yaml  ci.yaml  container-security-scan.yml  coverage.yml  demo-dir.yaml  demo-dirctl.yaml  demo-local-windows.yaml  demo-local.yaml  demo.yaml  lint-pr-title.yaml  post-release.yml  pr.yaml  project.yaml  reusable-brew-update.yaml  reusable-build-load.yaml  reusable-build-push.yaml  reusable-build.yaml  reusable-release-sdk.yaml  reusable-release.yaml  reusable-test-e2e.yaml  reusable-test-sdk.yaml  reusable-test-spire.yaml  reusable-test.yaml
HomebrewFormula/: README.md  dirctl.rb
api/: buf.gen.yaml  buf.yaml  go.mod  go.sum
api/go/: go.mod  go.sum
api/objectmanager/: record.pb.go  record_grpc.pb.go
api/proto/: buf.gen.yaml  buf.yaml
api/python/: pyproject.toml
cli/: Dockerfile  README.md  build.config.yaml  build.config.yml  cli.go  go.mod  go.sum
cli/builder/: README.md  builder.go
cli/builder/plugins/runtime/analyzer/python/testdata/pyproject-no-version/: pyproject.toml
cli/cmd/: main.go  options.go  root.go
cli/presenter/: output.go  presenter.go
cli/types/: types.go  types_test.go
cli/util/: context.go
client/: README.md  client.go  config.go  go.mod  go.sum  jwt.go  options.go  routing.go  search.go  search_v1alpha2.go  sign.go  store.go  sync.go  verify.go
client/go/: config.go  go.mod  store.go
client/python/: README.md  (+2 more)
docs/: federation.md  security-schema.md
e2e/: README.md  client_test.go  demo-hostkey  dirctl_local_routing_test.go  dirctl_network_cmd_test.go  dirctl_network_deploy_test.go  dirctl_network_sync_test.go  dirctl_remote_search_test.go  dirctl_search_test.go  dirctl_sign_test.go  dirctl_test.go  embed.go  go.mod  go.sum  suite_test.go  utils.go
e2e/testdata/marketing-strategy/: README.md  pyproject.toml
e2e/testdata/marketing-strategy/marketing_strategy_multi/: main.py  nodes.py  workflow.py
e2e/testdata/marketing-strategy/marketing_strategy_multi/chief_marketing_strategist/: crew.py  main.py
e2e/testdata/marketing-strategy/marketing_strategy_multi/chief_marketing_strategist/config/: agents.yaml  tasks.yaml
e2e/testdata/marketing-strategy/marketing_strategy_multi/creative_content_creator/: crew.py  main.py
e2e/testdata/marketing-strategy/marketing_strategy_multi/creative_content_creator/config/: agents.yaml  tasks.yaml
e2e/testdata/marketing-strategy/marketing_strategy_multi/lead_market_analyst/: crew.py  main.py
e2e/testdata/marketing-strategy/marketing_strategy_multi/lead_market_analyst/config/: agents.yaml  tasks.yaml
e2e/testdata/marketing-strategy/marketing_strategy_multi/runtime/: nodes.py  runtime.py  utils.py
e2e/testdata/marketing-strategy/marketing_strategy_multi/runtime/executors/argo_workflows/: workflow_agent.py  workflow_agent.yaml.tpl  workflow_context.py  workflow_template.py
e2e/testdata/marketing-strategy/marketing_strategy_multi/runtime/executors/local/: local_executor.py
e2e/testdata/marketing-strategy/marketing_strategy_multi/runtime/observability/: observer.py  serve.py
e2e/testdata/marketing-strategy/marketing_strategy_multi/utils/: crew.py  crewai_telemetry.py  parser.py  state.py  telemetry.py
hub/: go.mod  go.sum  hub.go
importer/: go.mod  go.sum
proto/: buf.gen.yaml  buf.yaml
sdk/dir-py/: .gitignore  README.md  pyproject.toml
sdk/dir-py/agntcy/dir_sdk/: utils.py
sdk/dir-py/agntcy/dir_sdk/client/: __init__.py  client.py  config.py  test_client.py
sdk/dir-py/agntcy/dir_sdk/models/: README.md  __init__.py  core_v1.py  routing_v1.py  search_v1.py  sign_v1.py  store_v1.py
sdk/dir-py/agntcy_dir/client/: __init__.py  client.py  config.py  test_client.py
sdk/dir-py/agntcy_dir/models/: __init__.py  core_v1.py  objects_v1.py  objects_v2.py  objects_v3.py  routing_v1.py  search_v1.py  sign_v1.py  store_v1.py
sdk/dir-py/example/: example.py  pyproject.toml
sdk/python/: README.md  __init__.py  pyproject.toml
sdk/python/v1/: client.py  example.py  test_client.py
sdk/python/v2/: client.py
server/: Dockerfile  go.mod  go.sum  server.config.yml  server.go
tools/python/api/: pyproject.toml
tools/python/api/core/v1alpha1/: agent_pb2.py  agent_pb2.pyi  extension_pb2.py  extension_pb2.pyi  locator_pb2.pyi  object_pb2.pyi  signature_pb2.py  signature_pb2.pyi
tools/python/api/core/v1alpha2/: extension_pb2.py  extension_pb2.pyi  locator_pb2.py  locator_pb2.pyi  record_pb2.py  record_pb2.pyi  signature_pb2.py  signature_pb2.pyi  skill_pb2.py  skill_pb2.pyi
tools/python/api/objectmanager/: record_pb2.py  record_pb2.pyi  record_pb2_grpc.py
tools/python/api/routing/v1alpha1/: peer_pb2.py  routing_service_pb2_grpc.py
tools/python/api/routing/v1alpha2/: peer_pb2.py  peer_pb2.pyi  record_query_pb2.py  record_query_pb2.pyi  routing_service_pb2.py  routing_service_pb2.pyi  routing_service_pb2_grpc.py
tools/python/api/search/v1alpha2/: record_query_pb2.py  record_query_pb2.pyi  search_service_pb2.py  search_service_pb2.pyi  search_service_pb2_grpc.py
tools/python/api/sign/v1alpha1/: sign_service_pb2.py  sign_service_pb2.pyi  sign_service_pb2_grpc.py
tools/python/api/sign/v1alpha2/: sign_service_pb2.py  sign_service_pb2.pyi  sign_service_pb2_grpc.py
tools/python/api/store/v1alpha1/: store_service_pb2.py
tools/python/api/store/v1alpha2/: object_pb2.py  object_pb2.pyi  record_pb2.py  record_pb2_grpc.py  store_service_pb2.py  store_service_pb2.pyi  store_service_pb2_grpc.py  sync_service_pb2.py  sync_service_pb2.pyi  sync_service_pb2_grpc.py
tools/python/client/: README.md  example.py  pyproject.toml
tools/python/client/client/: client.py
tools/python/client/tests/: test_client.py
utils/: go.mod  go.sum
(+828 files in other folders)
