[project]
name = "agtncy-dir"
version = "0.1.0"
description = "Directory SDK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agntcy-dir-grpc-python==1.74.1.1.20250902143656+38a679e0e504",
    "agntcy-oasf-grpc-python==1.74.1.1.20250903135852+a54b2d03191d",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "uuid>=1.30",
]

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["CPY001"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.flake8-copyright]
notice-rgx = '''
(?i)# Copyright AGNTCY Contributors \(https:\/\/github\.com\/agntcy\)
(?i)# SPDX-License-Identifier: Apache-2\.0
'''
