[project]
name = "agntcy-dir"
version = "0.1.0"
description = "Directory SDK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agntcy-dir-grpc-python==1.75.0.1.20250917104837+762975861d20"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "uuid>=1.30",
]

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["CPY001"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.flake8-copyright]
notice-rgx = '''
(?i)# Copyright AGNTCY Contributors \(https:\/\/github\.com\/agntcy\)
(?i)# SPDX-License-Identifier: Apache-2\.0
'''
