[project]
name = "agntcy-dir-sdk"
version = "0.1.3"
description = "Directory client SDK"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = ["agntcy-dir-grpc-python==1.74.0.1.20250730140857+ac127ee206f2"]

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[tool.setuptools]
packages = ["v1"]
py-modules = ["__init__"]
