[project]
name = "agntcy-dir-sdk"
version = "0.1.10"
description = "Directory client SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "agntcy-dir-grpc-python==1.74.1.1.20250904070231+b2906e58eb12",
]

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[tool.setuptools]
packages = ["v1"]
py-modules = ["__init__"]
