[project]
name = "agntcy-dir-client-sdk"
version = "0.1.0"
description = "Directory client SDK"
requires-python = ">=3.12"
dependencies = [
    "agntcy-dir-grpc-python==1.73.1.1.20250711144851+8778230438be",
    "agntcy-dir-protocolbuffers-python==31.1.0.1.20250711144851+8778230438be",
    "pytest",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
url = "https://buf.build/gen/python"
