[project]
name = "semantic-router"
version = "0.1.0"
description = "Example of semantic router taken from the autogen repository"
readme = "README.md"
dependencies = [
    "autogen-core==0.4.0.dev6",
    "fastapi>=0.115.5",
    "openai>=1.54.4",
    "rich>=13.9.4",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
    "mypy==1.10.0",
    "pytest>=8.3.3",
]

[tool.mypy]
strict = true
python_version = "3.10"
ignore_missing_imports = true

[tool.poetry]
name = "semantic-router"
version = "0.1.0"
description = "Example of semantic router taken from the autogen repository"
authors = ["Test"]

[tool.poetry.dependencies]
autogen-core = "=0.4.0.dev6"
fastapi = ">=0.115.5"
rich = ">=13.9.4"
uvicorn = ">=0.32.0"
